Implement yajl.to_value() in C, add some more tests, improve the documentation, and fix some bugs.
 * Check for "not ok" output which now results in test failures.

 * Make yajl.null a full user data so that in string context it will
   be the string "null".

 * yajl.parser():value(value, type) type parameter was always
   "integer" for numerical values.  Instead, it is now always
   "number" to better express the type of the value.

 * coerce object keys into strings before calling js_generator_string
   so as to avoid getting an error about a non-string argument.

 * yajl.generator() simply did not work since the meta-table __index
   meta method was not set, so we now set that meta-method.

 * yajl.generator() had an off by one bug that would cause it to error
   when passed a printer argument.

--- a/README
+++ b/README
@@ -65,14 +65,15 @@ string = yajl.to_string(lua_obj)
 
     Translate a lua object into a JSON representation by creating a
     generator and calling the 'value' method with the passed in
-    lua_obj and returns the result.
+    lua_obj and returns the result.  See generator:value() for more
+    information about this operation.  Note that information loss
+    may happen in certain situations.  For example, empty tables are
+    always translated into empty arrays.
 
+lua_obj = yajl.to_value(string)
 
-TODO: lua_obj = yajl.to_value(string)
-
-   >>VAPORWARE<<
-
-    Simple interface that simply executes this code:
+    Translate a string to a lua object.  This is done in C by running
+    code that is essentially the same as this (but faster):
 
     function to_value(string)
         local result
@@ -146,8 +147,7 @@ parser = yajl.parser {
 
             "string"  - A JSON string was found.
             "boolean" - A JSON true or false was found.
-            "integer" - A JSON integer was found.
-            "double"  - A JSON double was found.
+            "number"  - A JSON number was found.
             "null"    - A JSON null was found.
 
         Note that nulls are NOT represented as a Lua nil value,
